🔧 chore: adicionado arquivos ao package.json •⁠  ⁠incluídos diretórios 'dist' e 'README.md' na lista de arquivos.

--- a/package.json
+++ b/package.json
@@ -104,5 +104,9 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
-  }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ]
 }
